--- a/pages/cms.html
+++ b/pages/cms.html
@@ -6,13 +6,13 @@
   <title>Webhook</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <meta name="siteName" content="athena">
+  <meta name="siteName" content="president-archive,1risd,1systems">
   <meta name="buildLive" content="true">
   {% if cmsSocketPort %}
   <meta name="socketPort" content="{{ cmsSocketPort }}">
   {% endif %}
 
-  <link rel="stylesheet" href="http://cms.webhook.com/{{ cmsVersion }}/assets/app.min.css">
+  <link rel="stylesheet" href="//webhook-assets.risd.systems/{{ cmsVersion }}/assets/app.min.css">
 
   <link rel="shortcut icon" href="/static/images/favicon.png">
   <link rel="apple-touch-icon icon-precomposed" href="/static/images/touch-icon.png"/>
@@ -28,9 +28,9 @@
   </script>
   {% endif %}
 
-  <script src="http://cms.webhook.com/{{ cmsVersion }}/assets/js/config.min.js"></script>
-  <script src="http://cms.webhook.com/{{ cmsVersion }}/assets/vendor.min.js"></script>
-  <script src="http://cms.webhook.com/{{ cmsVersion }}/assets/js/app.min.js"></script>
+  <script src="//webhook-assets.risd.systems/{{ cmsVersion }}/assets/js/config.min.js"></script>
+  <script src="//webhook-assets.risd.systems/{{ cmsVersion }}/assets/vendor.min.js"></script>
+  <script src="//webhook-assets.risd.systems/{{ cmsVersion }}/assets/js/app.min.js"></script>
 
 </head>
 <body>
