--- a/pages/cms.html
+++ b/pages/cms.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="//webhook-assets.risd.systems/cms/{{ cmsVersion }}/assets/app.min.css">
   
   <!-- optional, locally supplied stylesheet to override the above -->
-  <link rel="stylesheet" href="/static/styles/cms.css">
+  <link rel="stylesheet" href="/static/css/cms.css">
 
   {% include 'templates/partials/cms/head.html' %}
 
